updated favicon, pdf resume, played around with image sizes. pls fix: spacing, move image to the side, separate into <home> <about> <contact>

--- a/css/master.css
+++ b/css/master.css
@@ -1,12 +1,14 @@
 /*Naoki Rufian*/
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
   a {
-    color: blue;
-    text-decoration: : none;
+    color: #869ce3;
+    text-decoration: none;
   }
 
   a:hover {
-    color: red;
+    color: #c7484d;
     text-decoration: none;
   }
 
@@ -25,7 +27,7 @@
   h1 {
     color: grey;
     margin-bottom: 0.5rem;
-    margin-top: 3rem;
+    margin-top: 0.5rem;
   }
 
   h2 {
@@ -57,9 +59,16 @@
   }
 
   /* this controls how the bullet points in the resume page looks*/
-  ul {
+  ol {
+    list-style-type: none;
     color: #075AAB;
     display: table;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+
+  li {
+    display: inline;
+    margin-left: 0.5rem;
   }
